fixing Address APIs
